k8s/academy/grafana/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
  namespace: cattle-monitoring-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.chancey.dev`)
      kind: Rule
      priority: 1
      services:
        - name: rancher-monitoring-grafana
          kind: Service
          port: 80
  tls:
    secretName: grafana-cert-tls
